--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ main {
 }
 
 .card {
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.1098039216);
   border-radius: 1.5em;
   overflow: hidden;
   display: grid;
